--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/prisma-client": [
+        "libs/prisma-client/src"
+      ],
+      "@app/prisma-client/*": [
+        "libs/prisma-client/src/*"
+      ]
+    }
   }
 }
