--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.3.8",
     "@prisma/client": "^5.14.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "lib": "^5.1.0",
     "prisma": "^5.14.0",
     "reflect-metadata": "^0.2.0",
